--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,11 +30,11 @@
         <span>{{ site.data.locales[include.lang].tabs.home | upcase }}</span>
       </a>
     </li>
-    <!-- blog -->
-    <li class="nav-item{% if page.url == '/blog/' | relative_url %}{{ " active" }}{% endif %}">
-      <a href="{{ '/blog/' | relative_url }}" class="nav-link">
+    <!-- projects -->
+    <li class="nav-item{% if page.url == '/projects/' | relative_url %}{{ " active" }}{% endif %}">
+      <a href="{{ '/projects/' | relative_url }}" class="nav-link">
         <i class="fa-fw fas fa-pen"></i> 
-        <span>{{ site.data.locales[include.lang].tabs.blog | upcase }}</span>
+        <span>{{ site.data.locales[include.lang].tabs.projects | upcase }}</span>
       </a>
     </li>
     <!-- the real tabs -->
